--- a/index.html
+++ b/index.html
@@ -159,5 +159,6 @@
   <body>
     <div class="noise-bg"></div>
     <div id="root" class="relative z-10"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
