--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600&display=swap" rel="stylesheet">
     <script>
+      // Critical Polyfill: Defines process.env globally before any modules load
+      // This prevents "process is not defined" errors during app initialization
+      window.process = window.process || { env: { API_KEY: '' } };
+    </script>
+    <script>
       tailwind.config = {
         darkMode: 'class',
         theme: {
