feat: Configure API key via environment variable
Initialize `process.env.API_KEY` in `index.html` to allow API key configuration.
This change makes the API key injectable, improving security and deployment flexibility.
The `gt;` characters in `App.tsx` were also updated to `>>` for consistency.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <script>
       // Critical Polyfill: Defines process.env globally before any modules load
       // This prevents "process is not defined" errors during app initialization
+      
+      // <!-- PASTE YOUR API KEY BELOW INSIDE THE QUOTES -->
       window.process = window.process || { env: { API_KEY: '' } };
+      // Example: window.process = window.process || { env: { API_KEY: 'AIzaSy...' } };
     </script>
     <script>
       tailwind.config = {
